src/core/generator/snapshots/tailcall__core__generator__from_openapi__tests__config_from_openapi_spec-2.snap
---
source: src/core/generator/from_openapi.rs
expression: "OpenApiToConfigConverter::new(\"Query\",\n                content.as_str()).unwrap().convert().to_sdl()"
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  completed: String!
  id: Int!
  title: String!
  userId: Int!
}

type Query {
  """
  Returns a post by id
  """
  getPost(id: Int!): Post @http(path: "/posts/{{args.id}}")
  """
  Returns all posts
  """
  getPosts: [Post] @http(path: "/posts")
}
