src/core/generator/snapshots/tailcall__core__generator__from_openapi__tests__openapi_apis_guru.snap
---
source: src/core/generator/from_openapi.rs
expression: apis_guru
---
schema @server @upstream {
  query: Query
}

  """
  Meta information about API
  """
type Api {
  """
  Timestamp when the API was first added to the directory
  """
  added: String!
  """
  Recommended version
  """
  preferred: String!
  """
  List of supported versions of the API
  """
  versions: JSON!
}

type ApiVersion {
  """
  Timestamp when the version was added
  """
  added: String!
  """
  Copy of `externalDocs` section from OpenAPI definition
  """
  externalDocs: JSON
  """
  Copy of `info` section from OpenAPI definition
  """
  info: JSON!
  """
  Link to the individual API entry for this API
  """
  link: String
  """
  The value of the `openapi` or `swagger` property of the source definition
  """
  openapiVer: String!
  """
  URL to OpenAPI definition in JSON format
  """
  swaggerUrl: String!
  """
  URL to OpenAPI definition in YAML format
  """
  swaggerYamlUrl: String!
  """
  Timestamp when the version was updated
  """
  updated: String!
}

  """
  List of basic metrics
  """
type Metrics {
  """
  Data used for charting etc
  """
  datasets: [JSON]
  """
  Percentage of all APIs where auto fixes have been applied
  """
  fixedPct: Int
  """
  Total number of fixes applied across all APIs
  """
  fixes: Int
  """
  Number of newly invalid APIs
  """
  invalid: Int
  """
  Open GitHub issues on our main repo
  """
  issues: Int
  """
  Number of unique APIs
  """
  numAPIs: Int!
  """
  Number of methods of API retrieval
  """
  numDrivers: Int
  """
  Total number of endpoints inside all definitions
  """
  numEndpoints: Int!
  """
  Number of API providers in directory
  """
  numProviders: Int
  """
  Number of API definitions including different versions of the same API
  """
  numSpecs: Int!
  """
  GitHub stars for our main repo
  """
  stars: Int
  """
  Summary totals for the last 7 days
  """
  thisWeek: Type0
  """
  Number of unofficial APIs
  """
  unofficial: Int
  """
  Number of unreachable (4XX,5XX status) APIs
  """
  unreachable: Int
}

type Query {
  """
  Returns the API entry for one specific version of an API where there is no serviceName.
  """
  getApi(api: String!, provider: String!): Api @http(baseURL: "https://api.apis.guru/v2", path: "/specs/{{.args.provider}}/{{.args.api}}.json")
  """
  Some basic metrics for the entire directory.
Just stunning numbers to put on a front page and are intended purely for WoW effect :)

  """
  getMetrics: Metrics @http(baseURL: "https://api.apis.guru/v2", path: "/metrics.json")
  """
  List all APIs in the directory for a particular providerName
Returns links to the individual API entry for each API.

  """
  getProvider(provider: String!): ApIs @http(baseURL: "https://api.apis.guru/v2", path: "/{{.args.provider}}.json")
  """
  List all the providers in the directory

  """
  getProviders: Unknown @http(baseURL: "https://api.apis.guru/v2", path: "/providers.json")
  """
  Returns the API entry for one specific version of an API where there is a serviceName.
  """
  getServiceApi(api: String!, provider: String!, service: String!): Api @http(baseURL: "https://api.apis.guru/v2", path: "/specs/{{.args.provider}}/{{.args.service}}/{{.args.api}}.json")
  """
  List all serviceNames in the directory for a particular providerName

  """
  getServices(provider: String!): Unknown @http(baseURL: "https://api.apis.guru/v2", path: "/{{.args.provider}}/services.json")
  """
  List all APIs in the directory.
Returns links to the OpenAPI definitions for each API in the directory.
If API exist in multiple versions `preferred` one is explicitly marked.
Some basic info from the OpenAPI definition is cached inside each object.
This allows you to generate some simple views without needing to fetch the OpenAPI definition for each API.

  """
  listApIs: ApIs @http(baseURL: "https://api.apis.guru/v2", path: "/list.json")
}
