src/core/generator/snapshots/tailcall__core__generator__from_openapi__tests__openapi_jsonplaceholder.snap
---
source: src/core/generator/from_openapi.rs
expression: jsonplaceholder
---
schema @server @upstream {
  query: Query
}

type Query {
  """
  Returns a post by id
  """
  getPost(id: Int!): Post @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts/{{.args.id}}")
  """
  Returns all posts
  """
  getPosts: [Post] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts")
}
